# sourmash_plugin_directsketch

./: Cargo.toml  Makefile  README.md  build.rs  environment.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-test.yml
src/: Cargo.toml  directsketch.rs  download.rs  lib.rs  utils.rs
src/python/sourmash_plugin_directsketch/: __init__.py
src/sourmash_plugin_directsketch/: __init__.py
src/utils/: buildutils.rs  mod.rs
tests/: conftest.py  test_gbsketch.py  test_urlsketch.py
tests/test-data/: acc-bad-header-order.csv  acc-cols.csv  acc-merged-md5sums.csv  acc-merged.csv  acc-url-md5sum.csv  acc-url-range.csv  acc-url-xz.csv  acc-url.csv  acc-version.csv  acc-with-ftppath.csv  acc-with-url.csv  acc.csv  acc5.csv
