
[package]
name = "sourmash_plugin_directsketch"
version = "0.4.0"
edition = "2021"

[lib]
name = "sourmash_plugin_directsketch"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.3", features = ["extension-module", "anyhow"] }
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
sourmash = { version = "0.15.2"}
serde_json = "1.0.120"
niffler = "2.4.0"
needletail = "0.5.1"
#zip = { version = "0.6", default-features = false, features = ["deflate"] }
async_zip={version="0.0.17", features=["full"]}
simple-error = "0.3.1"
anyhow = "1.0.89"
camino = "1.1.7"
csv = "1.3.0"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.11"
regex = "1.11.0"
chrono = "0.4.32"
lazy_static = "1.5.0"
md5 = "0.7.0"
openssl = { version = "0.10", features = ["vendored"] }
futures = "0.3.30"
getset = "0.1"

[profile.release]
#target-cpu=native
lto = "thin"
opt-level = 3

