
[package]
name = "sourmash_plugin_directsketch"
version = "0.5.0"
edition = "2021"

[lib]
name = "sourmash_plugin_directsketch"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module","anyhow"]}
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
sourmash = { version = "0.18.0"}
serde_json = "1.0.140"
niffler = "2.4.0"
needletail = "0.5.1"
async_zip={version="0.0.17", features=["full"]}
simple-error = "0.3.1"
anyhow = "1.0.97"
camino = "1.1.7"
csv = "1.3.1"
reqwest = { version = "0.12.15", features = ["json", "stream", "blocking"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = {version = "0.7.14", features = ["io", "io-util"]}
tokio-stream = "0.1.17"
regex = "1.11.1"
chrono = "0.4.32"
lazy_static = "1.5.0"
md5 = "0.7.0"
openssl = { version = "0.10", features = ["vendored"] }
futures = "0.3.31"
getset = "0.1"
zip = "2.2.2"

[profile.release]
#target-cpu=native
lto = "thin"
opt-level = 3

